@@ -11,6 +11,7 @@ Process Hacker
      colors
    * Terminator test: TP1a (TP1, alternative method)
    * Terminator test: TT1a (TT1, alternative method)
+   * Thread wait analysis now detects NtQueryObject hangs
    * Small performance improvements
  * FIXED:
    * Broken system thread start addresses due to sign-extending 
